# AI-powered-scientific-search

./: Dockerfile  PRODUCTION_CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  api.py  chunking.py  config.py  evaluation.py  logging_utils.py  miner.py  reasoning.py  tracing.py  vector_store.py
tests/: test_api.py
