[project]
name = "ai-powered-scientific-search-engine"
version = "0.1.0"
description = "Simple NLP pipeline to mine scientific pages and query them via vector search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic-settings>=2.6.0",
  "python-json-logger>=2.0.7",
  "langfuse>=2.56.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langchain-huggingface>=0.1.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "pypdf>=5.1.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "pytest>=8.3.0"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
